--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,11 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd server
           npm install -g serverless
           yarn install
 
       - name: Deploy to Lambda
-        run: sls deploy
+        run: sls deploy --stage prod
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
